# prosody

./: .gitignore  .taplo.toml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONFIGURATION.md  Cargo.toml  Makefile  README.md  TIMER_TYPE_FIX_PLAN.md  docker-compose.yaml  rust_out
.github/workflows/: audit.yaml  coverage.yaml  documentation.yaml  general.yaml  quality.yaml  release.yaml
.specify/memory/: constitution.md
.specify/templates/: spec-template.md  tasks-template.md
benches/: dispatch.rs
bindings/nodejs/: Cargo.toml  README.md  package-lock.json  package.json
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/src/: lib.rs
bindings/ruby/: Cargo.toml  Rakefile  prosody.gemspec
bindings/ruby/ext/prosody/: extconf.rb
bindings/ruby/lib/: prosody.rb
bindings/ruby/src/: lib.rs
configs/: tempo-config.yaml
coverage/: tarpaulin-report.json
docs/: cassandra-mod-refactor-opportunities.md  cassandra-store-issues.md  inline-overflow-design.md  kafka-telemetry-plan.md
docs/snooze/: 01-load-slabs.md  02-scheduled-times-revised.md  02-scheduled-times.md  03-consumer-state-view.md  04-subscribe-mutex.md  05-slab-loader-revised.md  05-unschedule-all.md  synthesis.md
prosody/: Cargo.toml  README.md
prosody/src/: lib.rs  propagator.rs  util.rs
prosody/src/consumer/: context.rs  extractor.rs  message.rs  mod.rs  offsets.rs  poll.rs
prosody/src/consumer/offsets/: mod.rs  test.rs
prosody/src/consumer/partition/: keyed.rs  mod.rs  util.rs
prosody/src/consumer/partition/keyed/: mod.rs  test.rs
prosody/src/consumer/partition/offsets/: mod.rs  test.rs
prosody/src/producer/: injector.rs  mod.rs
prosody/tests/: integration.rs
specs/001-reduce-timer-tombstones/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-reduce-timer-tombstones/checklists/: requirements.md
specs/002-kafka-telemetry/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-kafka-telemetry/checklists/: requirements.md
specs/002-kafka-telemetry/contracts/: telemetry-events.schema.json
src/: admin.rs  codec.rs  deduplication.rs  heartbeat.rs  lib.rs  mock.rs  otel.rs  prelude.rs  propagator.rs  tracing.rs  util.rs
src/cassandra/: config.rs  errors.rs  macros.rs  mod.rs
src/cassandra/migrations/: 20250613_create_timers.cql  20251023_add_timer_types.cql  20251117_create_deferred_messages.cql  20251126_create_deferred_offsets.cql  20251223_create_deferred_timers.cql  20260217_add_singleton_slots.cql  20260319_create_deduplication.cql  20260409_add_deferred_next_hints.cql  20260424_deduplication_unified_compaction.cql
src/cassandra/migrator/: executor.rs  loader.rs  lock.rs  mod.rs  tests.rs  utils.rs  validator.rs
src/codec/: binary.rs  json.rs  mod.rs
src/combined/: config.rs  mod.rs  mode.rs  state.rs
src/consumer/: context.rs  decode.rs  event_context.rs  extractor.rs  heartbeat.rs  kafka_context.rs  message.rs  mod.rs  poll.rs  probes.rs  storage.rs
src/consumer/failure/: concurrency.rs  log.rs  mod.rs  retry.rs  shutdown.rs  topic.rs
src/consumer/middleware/: cancellation.rs  concurrency.rs  log.rs  mod.rs  monopolization.rs  optional.rs  providers.rs  retry.rs  shutdown.rs  telemetry.rs  test_support.rs  timeout.rs  topic.rs
src/consumer/middleware/deduplication/: cassandra.rs  config.rs  memory.rs  mod.rs  queries.rs  store.rs
src/consumer/middleware/deduplication/tests/: handler.rs  mod.rs  prop_dedup_store.rs
src/consumer/middleware/defer/: DESIGN.md  STATUS.md  config.rs  decider.rs  error.rs  failure_tracker.rs  handler.rs  mod.rs  tests.rs
src/consumer/middleware/defer/handler/: mod.rs
src/consumer/middleware/defer/loader/: memory.rs  mod.rs  tests.rs
src/consumer/middleware/defer/message/: mod.rs
src/consumer/middleware/defer/provider/: cassandra.rs  memory.rs  mod.rs
src/consumer/middleware/defer/segment/: cassandra.rs  lazy.rs  mod.rs  store.rs
src/consumer/middleware/defer/store/: cached.rs  key_ref.rs  lazy.rs  memory.rs  mod.rs  provider.rs
src/consumer/middleware/defer/tests/: context.rs  generator.rs  handler.rs  harness.rs  properties.rs  types.rs
src/consumer/middleware/defer/timer/: context.rs  handler.rs  middleware.rs  mod.rs
src/consumer/middleware/scheduler/: DESIGN1.md  DESIGN2.md  decay.rs  dispatch.rs  mod.rs
src/consumer/partition/: mod.rs  test.rs  util.rs
src/consumer/partition/keyed/: mod.rs  test.rs
src/consumer/partition/offsets/: mod.rs  test.rs
src/error/: kafka.rs  mod.rs
src/high_level/: config.rs  mod.rs  mode.rs  state.rs  tests.rs
src/producer/: error.rs  injector.rs  mod.rs
src/telemetry/: emitter.rs  event.rs  handler.rs  injector.rs  mod.rs  partition.rs  sender.rs
src/timers/: TIMER_TYPES_MIGRATION.md  active.rs  datetime.rs  duration.rs  error.rs  guards.rs  loader.rs  manager.rs  migration.rs  mod.rs  queue.rs  range.rs  scheduler.rs  slab.rs  slab_lock.rs  trigger.rs  triggers.rs  uncommitted.rs
src/timers/store/: adapter.rs  cached.rs  memory.rs  mod.rs  operations.rs
src/timers/store/cassandra/: embedded_migrator.rs  error.rs  migration.rs  migrator.rs  mod.rs  mutators.rs  provider.rs  queries.rs  state.rs  tests.rs  trigger_store.rs
src/timers/store/cassandra/migrations/: 20250613_create_timers.cql
src/timers/store/cassandra/migrator/: executor.rs  loader.rs  lock.rs  (+4 more)
src/timers/store/tests/: cleanup_operations.rs  common.rs  contention.rs  cross_slab.rs  migration.rs  mod.rs  primitive_operations.rs  prop_high_level.rs  prop_key_triggers.rs  prop_segments.rs  prop_slab_metadata.rs  prop_slab_triggers.rs  prop_v1_high_level.rs  prop_v1_key_triggers.rs  prop_v1_slab_metadata.rs  prop_v1_slab_triggers.rs  segment.rs  sequential_interleavings.rs  slabs.rs  trigger_consistency.rs  trigger_operations.rs
tests/: allowed_events.rs  backpressure.rs  common.rs  concurrency_limit.rs  context_invalidation.rs  deduplication.rs  defer_middleware.rs  integration.rs  messsage_ordering.rs  producer.rs  quickstart.rs  regex_subscription.rs  source_filtering.rs  telemetry.rs  timer_backpressure.rs  timers.rs
(+60 files in other folders)
