[package]
categories = ["asynchronous", "network-programming"]
description = "A high-level Kafka client library with OpenTelemetry integration for distributed tracing"
edition = "2021"
keywords = [
    "distributed-systems",
    "kafka",
    "messaging",
    "opentelemetry",
    "tracing",
]
license = "All Rights Reserved"
name = "prosody"
readme = "README.md"
repository = "https://github.com/RealGeeks/prosody"
version = "0.1.0"

[dependencies]
ahash = "0.8"
chrono = "0.4"
crossbeam-utils = "0.8"
derive_builder = "0.20"
educe = "0.6"
futures = "0.3"
humantime = "2.1"
internment = "0.8"
nohash-hasher = "0.2"
opentelemetry = "0.24"
opentelemetry-otlp = { version = "0.17", features = [
    "gzip-tonic",
    "tls",
    "tls-roots",
] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
parking_lot = "0.12"
pin-project = "1.1"
rand = "0.8"
rdkafka = { git = "https://github.com/fede1024/rust-rdkafka.git", rev = "bb76b5bd4010599e90f02d9d3460c2d616a55752", features = [
    "cmake-build",
    "tracing",
] }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.38", features = ["macros", "sync"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["gzip", "tls", "tls-roots"] }
tracing = { version = "0.1", features = ["log"] }
tracing-opentelemetry = "0.25"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.18", features = ["derive"] }
whoami = "1.5"

[dev-dependencies]
color-eyre = "0.6"
derive-quickcheck-arbitrary = "0.1"
itertools = "0.13"
quickcheck = "1.0"
quickcheck_macros = "1.0"
scc = "2.1"
tokio = { version = "1.38", features = ["rt-multi-thread"] }
uuid = { version = "1.9", features = ["v4"] }

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
blocks_in_conditions = "allow"
cargo = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
create_dir = "warn"
dbg_macro = "warn"
default_numeric_fallback = "warn"
empty_structs_with_brackets = "warn"
error_impl_error = "warn"
exit = "warn"
expect_used = "deny"
format_push_string = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
missing_assert_message = "warn"
module_name_repetitions = "allow"
multiple_inherent_impl = "warn"
mutex_atomic = "warn"
needless_raw_strings = "warn"
panic = "deny"
pedantic = { level = "warn", priority = -1 }
print_stderr = "warn"
print_stdout = "warn"
rc_mutex = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
semicolon_outside_block = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
string_to_string = "warn"
todo = "warn"
try_err = "warn"
unimplemented = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unreachable = "warn"
unwrap_used = "deny"
verbose_file_reads = "warn"

[profile.release]
codegen-units = 1
lto = "fat"
