[package]
categories = ["asynchronous", "network-programming"]
description = "A high-level Kafka client library with OpenTelemetry integration for distributed tracing"
edition = "2024"
keywords = [
    "distributed-systems",
    "kafka",
    "messaging",
    "opentelemetry",
    "tracing",
]
license = "UNLICENSED"
name = "prosody"
readme = "README.md"
repository = "https://github.com/cincpro/prosody"
version = "0.10.1"

[dependencies]
ahash = "0.8"
aho-corasick = "1.1"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.8", features = ["http2"] }
axum-extra = "0.10"
chrono = "0.4"
crossbeam-utils = "0.8"
derive_builder = "0.20"
dyn-clone = "1.0"
educe = "0.6"
fixedstr = { version = "0.5", features = ["flex-str"] }
futures = "0.3"
humantime = "2.2"
internment = "0.8"
nohash-hasher = "0.2"
opentelemetry = "0.30"
opentelemetry-otlp = { version = "0.30", features = [
    "grpc-tonic",
    "gzip-tonic",
    "tls",
    "tls-roots",
] }
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
parking_lot = { version = "0.12", features = ["hardware-lock-elision"] }
pin-project = "1.1"
quick_cache = "0.6"
rand = "0.9"
rdkafka = { version = "0.37", features = ["cmake-build", "tracing"] }
rust-embed = { version = "8.7", features = ["include-exclude"] }
scc = "2.3"
scylla = { version = "1.2", features = ["chrono-04", "openssl-010"] }
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
simd-json = { version = "0.15", features = ["serde_impl"], optional = true }
thiserror = "2.0"
tokio = { version = "1.45", features = ["macros", "sync"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["time"] }
tonic = { version = "0.13", features = ["gzip", "tls-webpki-roots"] }
tracing = { version = "0.1", features = ["log"] }
tracing-opentelemetry = "0.31"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.17", features = ["v5"] }
validator = { version = "0.20", features = ["derive"] }
whoami = "1.6"

[features]
cmake-build = ["rdkafka/cmake-build"]
default = ["cmake-build"]

[target.'cfg(not(target_arch = "arm"))'.dependencies]
simd-json = { version = "0.15", features = ["serde_impl"] }

[dev-dependencies]
color-eyre = "0.6"
derive-quickcheck-arbitrary = "0.1"
itertools = "0.14"
quickcheck = "1.0"
quickcheck_macros = "1.1"
reqwest = "0.12"
tokio = { version = "1.44", features = ["rt-multi-thread", "test-util"] }
uuid = { version = "1.16", features = ["v4"] }

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
blocks_in_conditions = "allow"
cargo = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
create_dir = "warn"
dbg_macro = "warn"
default_numeric_fallback = "warn"
empty_structs_with_brackets = "warn"
error_impl_error = "warn"
exit = "warn"
expect_used = "deny"
format_push_string = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
missing_assert_message = "warn"
module_name_repetitions = "allow"
multiple_inherent_impl = "warn"
mutex_atomic = "warn"
needless_raw_strings = "warn"
panic = "deny"
pedantic = { level = "warn", priority = -1 }
print_stderr = "warn"
print_stdout = "warn"
rc_mutex = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
semicolon_outside_block = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
string_to_string = "warn"
todo = "warn"
try_err = "warn"
unimplemented = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unreachable = "warn"
unwrap_used = "deny"
verbose_file_reads = "warn"

[profile.release]
codegen-units = 1
lto = "fat"
