[package]
categories = ["asynchronous", "network-programming"]
description = "A high-level Kafka client library with OpenTelemetry integration for distributed tracing"
edition = "2024"
keywords = [
    "distributed-systems",
    "kafka",
    "messaging",
    "opentelemetry",
    "tracing",
]
license = "UNLICENSED"
name = "prosody"
readme = "README.md"
repository = "https://github.com/cincpro/prosody"
version = "0.12.0"

[dependencies]
ahash = "0.8"
aho-corasick = "1.1"
arc-swap = "1.8"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.8", features = ["http2"] }
axum-extra = { version = "0.12", features = ["routing"] }
chrono = "0.4"
crossbeam-utils = "0.8"
derive_builder = "0.20"
dyn-clone = "1.0"
educe = "0.6"
fixedstr = { version = "0.5", features = ["flex-str"] }
futures = "0.3"
humantime = "2.3"
internment = "0.8"
intervallum = "1.4"
nohash-hasher = "0.2"
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = [
    "grpc-tonic",
    "http-json",
    "http-proto",
] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
parking_lot = { version = "0.12", features = ["hardware-lock-elision"] }
paste = "1.0"
pin-project = "1.1"
portable-atomic = { version = "1.0", features = ["float"] }
quanta = "0.12"
quick_cache = "0.6"
rand = "0.10"
rdkafka = { version = "0.39", features = ["tracing"] }
rust-embed = { version = "8.11", features = ["include-exclude"] }
scc = "3.6"
scylla = { version = "1.5", features = ["chrono-04"] }
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
simd-json = { version = "0.17", features = ["serde_impl"], optional = true }
smallvec = { version = "1.15", features = ["const_generics", "union"] }
strum = { version = "0.28", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.49", features = ["macros", "parking_lot", "sync"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["time"] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "parking_lot",
] }
uuid = { version = "1.21", features = ["v5"] }
validator = { version = "0.20", features = ["derive"] }
whoami = "2.1"

[features]
default = ["cmake-build"]

# Build system
cmake-build = ["rdkafka/cmake-build"]

# Linking
dynamic-linking = ["rdkafka/dynamic-linking"]
static-linking = ["rdkafka/static-linking"]

# SSL/TLS
ssl = ["rdkafka/ssl"]
ssl-vendored = ["rdkafka/ssl-vendored"]

# SASL/GSSAPI authentication
gssapi = ["rdkafka/gssapi"]
gssapi-vendored = ["rdkafka/gssapi-vendored"]
sasl = ["rdkafka/sasl"]

# HTTP client (for schema registry, etc.)
curl = ["rdkafka/curl"]
curl-static = ["rdkafka/curl-static"]

# Compression
external-lz4 = ["rdkafka/external-lz4"]
libz-static = ["rdkafka/libz-static"]
zstd = ["rdkafka/zstd"]
zstd-pkg-config = ["rdkafka/zstd-pkg-config"]

[target.'cfg(not(target_arch = "arm"))'.dependencies]
simd-json = { version = "0.17", features = ["serde_impl"] }

[dev-dependencies]
color-eyre = "0.6"
derive-quickcheck-arbitrary = "0.1"
itertools = "0.14"
quickcheck = "1.0"
quickcheck_macros = "1.1"
reqwest = "0.13"
slotmap = "1.1"
tokio = { version = "1.44", features = ["rt-multi-thread", "test-util"] }
uuid = { version = "1.16", features = ["v4"] }

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
absolute_paths = "warn"
blocks_in_conditions = "allow"
cargo = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
create_dir = "warn"
dbg_macro = "warn"
default_numeric_fallback = "warn"
empty_structs_with_brackets = "warn"
error_impl_error = "warn"
exit = "warn"
expect_used = "deny"
format_push_string = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
implicit_clone = "warn"
missing_assert_message = "warn"
module_name_repetitions = "allow"
multiple_inherent_impl = "warn"
mutex_atomic = "warn"
needless_raw_strings = "warn"
panic = "deny"
pedantic = { level = "warn", priority = -1 }
print_stderr = "warn"
print_stdout = "warn"
rc_mutex = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
semicolon_outside_block = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
todo = "warn"
try_err = "warn"
unimplemented = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unreachable = "warn"
unwrap_used = "deny"
verbose_file_reads = "warn"

[profile.release]
codegen-units = 1
lto = "fat"
