[package]
edition = "2021"
name = "prosody"
version = "0.1.0"

[dependencies]
ahash.workspace = true
crossbeam-utils.workspace = true
educe.workspace = true
futures.workspace = true
internment.workspace = true
log = "0.4.21"
nohash-hasher.workspace = true
parking_lot.workspace = true
pin-project.workspace = true
rdkafka.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "sync"] }
tokio-stream.workspace = true
tracing.workspace = true

[dev-dependencies]
quickcheck.workspace = true
quickcheck_macros.workspace = true
scc.workspace = true
tokio = { workspace = true, features = ["rt"] }
