[project]
authors = [
    { name = "Joshua Griffith", email = "joshua.griffith@realgeeks.com" },
]
description = "High-level Kafka interface"
dynamic = ["version"]
keywords = ["consumer", "events", "kafka", "producer"]
name = "prosody"
readme = "README.md"

[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0,<2.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
